--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,12 @@
+main {
+  width: 100%;
+  height: 100vh;
+  box-sizing: border-box;
+}
+
 nav {
+  margin-bottom: 12px;
+
   ul {
     margin: 0;
     padding: 0;
