--- a/src/components/skeleton/Skeleton.scss
+++ b/src/components/skeleton/Skeleton.scss
@@ -2,10 +2,11 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 0.75fr 0.25fr;
+  grid-template-columns: 1fr 1fr 2fr 3fr;
+  grid-template-rows: 2fr 1fr 1fr 2fr 2fr;
   row-gap: 10px;
   column-gap: 10px;
+  justify-content: stretch;
 
   > div {
     border-radius: 5px;
@@ -16,7 +17,7 @@
 
   .skeleton__filter-panel {
     grid-column: 1 / 4;
-    grid-row: 1 / 3;
+    grid-row: 1/3;
   }
 
   .skeleton__table-container {
@@ -24,26 +25,29 @@
     grid-column: 1 / 4;
     grid-row: 3 / 6;
     flex-direction: column;
-    justify-content: center;
-    box-sizing: content-box;
+    justify-content: space-evenly;
+    overflow: hidden;
 
-    div {
+    .skeleton__table_container-row {
       margin: 6px 6px;
+      display: flex;
       width: calc(100% - 18px);
-      height: 5%;
-      border-radius: 5px;
-      background-color: #d0e6f8;
+      height: auto;
+
+      > div {
+        flex: 1 1 10%;
+        height: 100%;
+        border-radius: 5px;
+        background-color: #d0e6f8;
+        margin: 6px 6px;
+        border-radius: 5px;
+      }
     }
   }
   .skeleton__map-container {
-    grid-column: 4 / 7;
-    grid-row: 1 / 6;
+    grid-column: 4/5;
+    grid-row: 1/6;
   }
-}
-
-.skeleton__footer {
-  grid-column: 1 / 7;
-  grid-row: 6 / 7;
 }
 
 @keyframes shine {
