--- a/src/shared/components/button/Button.scss
+++ b/src/shared/components/button/Button.scss
@@ -3,12 +3,24 @@
   outline: none;
   border: 1px solid black;
   background-color: transparent;
-  padding: 3px 12px;
+  padding: 3px 7px;
   font-size: 12px;
+  cursor: pointer;
 
-  &:hover {
+  &.small {
+    font-size: 1px;
+    padding: 2px 5px;
+  }
+
+  &:hover:not(:disabled) {
     background-color: black;
     color: white;
+  }
+
+  &:disabled {
+    cursor: text;
+    color: rgb(190, 188, 188);
+    border-color: rgb(190, 188, 188);
   }
 
   &.primary {
