--- a/src/Pages/SpotDetailView/SotDetailView.scss
+++ b/src/Pages/SpotDetailView/SotDetailView.scss
@@ -1,3 +1,14 @@
-.detail-view {
+.spot-detail {
   display: grid;
+  height: 100%;
+  width: 100%;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr;
+  column-gap: 10px;
+}
+
+.spot-detail--info {
+  grid-column: 1 / 2;
+  grid-row: 1/1;
+  padding: 12px;
 }
