--- a/src/Pages/SpotDetailView/components/SpotInfo/SpotInfo.scss
+++ b/src/Pages/SpotDetailView/components/SpotInfo/SpotInfo.scss
@@ -1,3 +1,13 @@
+.spot-info-headline {
+  display: flex;
+  align-items: center;
+  column-gap: 8px;
+}
+
+h2 {
+  margin: 0;
+}
+
 .info-list {
   list-style: none;
 }
