--- a/src/Pages/Atlas/components/Spots/Spots.scss
+++ b/src/Pages/Atlas/components/Spots/Spots.scss
@@ -1,30 +1,105 @@
-.spots {
-  display: grid;
-  height: 100%;
-  width: 100%;
-  grid-template-columns: 1fr 1fr 2fr 3fr;
-  grid-template-rows: 2fr 1fr 1fr 2fr 2fr;
-  row-gap: 10px;
-  column-gap: 10px;
+.map__container {
+  border: 1px solid transparent;
+  padding: 5px;
+  background-color: #aad3df;
+  border-radius: 5px;
+}
 
+// laptop
+@media only screen and (min-device-width: 1200px) and (max-device-width: 2000px) and (-webkit-min-device-pixel-ratio: 1) {
+  .spots {
+    display: grid;
+    height: 100%;
+    width: 100%;
+    grid-template-columns: 1fr 1fr 2fr 3fr;
+    grid-template-rows: 2fr 1fr 1fr 2fr 4fr;
+    row-gap: 10px;
+    column-gap: 10px;
+
+    .filter__panel {
+      grid-column: 1 / 4;
+      grid-row: 1/2;
+    }
+
+    .table__container {
+      grid-column: 1 / 4;
+      grid-row: 2 / 6;
+    }
+
+    .map__container {
+      grid-column: 4 / 7;
+      grid-row: 1 / 6;
+      grid-column: 4/5;
+    }
+  }
+}
+
+@media screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 4) {
+  .spots {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+
+    .map__container {
+      height: 250px;
+      margin-top: 10px;
+    }
+  }
+}
+
+// smart phone landscape and portaits
+@media screen and (min-device-width: 320px) and (max-width: 767px) {
+  .spots {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    row-gap: 10px;
+
+    .map__container {
+      height: 250px;
+      margin-top: 10px;
+    }
+  }
+}
+
+// tablets portait
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
+  .spots {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+
+    .map__container {
+      height: 400px;
+      margin-top: 10px;
+    }
+  }
+}
+
+/* Landscape */
+@media only screen and (min-device-width: 800px) and (max-device-width: 1085px) and (orientation: landscape) {
+  .spots {
+    display: grid;
+
+    grid-template-columns: 60% calc(40% - 25px);
+    grid-template-rows: 0.5fr 1fr 3fr;
+
+    column-gap: 10px;
+  }
   .filter__panel {
-    grid-column: 1 / 4;
-    grid-row: 1/3;
+    grid-column: 1;
+    grid-row: 1;
   }
 
   .table__container {
-    grid-column: 1 / 4;
-    grid-row: 3 / 6;
+    grid-column: 1;
+    grid-row: 2/4;
   }
 
   .map__container {
-    border: 1px solid transparent;
-    padding: 5px;
-    background-color: #aad3df;
-    border-radius: 5px;
-    grid-column: 4 / 7;
-    grid-row: 1 / 6;
-    grid-column: 4/5;
-    grid-row: 1/6;
+    width: 100%;
+    height: 500px;
+    grid-column: 2;
+    grid-row: 2/4;
   }
 }
