--- a/src/Pages/Atlas/components/skeleton/Skeleton.scss
+++ b/src/Pages/Atlas/components/skeleton/Skeleton.scss
@@ -2,11 +2,7 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr 2fr 3fr;
-  grid-template-rows: 2fr 1fr 1fr 2fr 2fr;
   row-gap: 10px;
-  column-gap: 10px;
-  justify-content: stretch;
 
   > div {
     border-radius: 5px;
@@ -15,15 +11,8 @@
     background-size: 200%;
   }
 
-  .skeleton__filter-panel {
-    grid-column: 1 / 4;
-    grid-row: 1/3;
-  }
-
   .skeleton__table-container {
     display: flex;
-    grid-column: 1 / 4;
-    grid-row: 3 / 6;
     flex-direction: column;
     justify-content: space-evenly;
     overflow: hidden;
@@ -44,14 +33,101 @@
       }
     }
   }
-  .skeleton__map-container {
-    grid-column: 4/5;
-    grid-row: 1/6;
-  }
 }
 
 @keyframes shine {
   to {
     background-position-x: -200%;
+  }
+}
+
+// smart phone landscape and portaits
+@media screen and (min-device-width: 320px) and (max-width: 800px) {
+  .skeleton {
+    .skeleton__table-container {
+      min-height: 300px;
+    }
+
+    .skeleton__map-container {
+      min-height: 200px;
+    }
+  }
+}
+
+/* Landscape */
+@media only screen and (min-device-width: 800px) and (max-device-width: 1085px) and (orientation: landscape) {
+  .skeleton {
+    display: grid;
+
+    grid-template-columns: 60% calc(40% - 25px);
+    grid-template-rows: 0.5fr 1fr 3fr;
+
+    column-gap: 10px;
+  }
+  .skeleton__filter-panel {
+    grid-column: 1/3;
+    grid-row: 1;
+  }
+
+  .skeleton__table-container {
+    grid-column: 1;
+    grid-row: 2/4;
+  }
+
+  .skeleton__map-container {
+    width: 100%;
+    height: 500px;
+    grid-column: 2;
+    grid-row: 2/4;
+  }
+}
+
+/* portrait*/
+@media only screen and (min-device-width: 800px) and (max-device-width: 1085px) and (orientation: portrait) {
+  .skeleton__map-container {
+    min-height: 400px;
+  }
+  .skeleton__table-container {
+    min-height: 500px;
+  }
+}
+
+// laptop
+@media only screen and (min-device-width: 1200px) and (max-device-width: 2000px) and (-webkit-min-device-pixel-ratio: 1) {
+  .skeleton {
+    grid-template-columns: 1fr 1fr 2fr 3fr;
+    grid-template-rows: 2fr 1fr 1fr 2fr 2fr;
+    row-gap: 10px;
+    column-gap: 10px;
+
+    .skeleton__filter-panel {
+      grid-column: 1 / 4;
+      grid-row: 1/3;
+    }
+
+    .skeleton__table-container {
+      grid-column: 1 / 4;
+      grid-row: 3 / 6;
+
+      .skeleton__table_container-row {
+        margin: 6px 6px;
+        display: flex;
+        width: calc(100% - 18px);
+        height: auto;
+
+        > div {
+          flex: 1 1 10%;
+          height: 100%;
+          border-radius: 5px;
+          background-color: #d0e6f8;
+          margin: 6px 6px;
+          border-radius: 5px;
+        }
+      }
+    }
+    .skeleton__map-container {
+      grid-column: 4/5;
+      grid-row: 1/6;
+    }
   }
 }
