--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
 body {
   font-family: "Amatic SC";
-  font-size: 36px;
+  font-size: 34px;
+}
+
+@media screen and (max-width: 600px) {
+  body {
+    font-size: 30px;
+  }
 }
